@@ -1,8 +1,8 @@
-/* $Id: testigddescparse.c,v 1.2 2009/12/03 13:50:06 nanard Exp $ */
+/* $Id: testigddescparse.c,v 1.4 2012/06/28 18:52:12 nanard Exp $ */
 /* Project : miniupnp
  * http://miniupnp.free.fr/
  * Author : Thomas Bernard
- * Copyright (c) 2008-2009 Thomas Bernard
+ * Copyright (c) 2008-2012 Thomas Bernard
  * This software is subject to the conditions detailed in the
  * LICENCE file provided in this distribution.
  * */
@@ -28,7 +28,7 @@ int test_igd_desc_parse(char * buffer, int len)
 	parser.datafunc = IGDdata;
 	parsexml(&parser);
 	printIGD(&igd);
-	GetUPNPUrls(&urls, &igd, "http://fake/desc/url/file.xml");
+	GetUPNPUrls(&urls, &igd, "http://fake/desc/url/file.xml", 0);
 	printf("ipcondescURL='%s'\n", urls.ipcondescURL);
 	printf("controlURL='%s'\n", urls.controlURL);
 	printf("controlURL_CIF='%s'\n", urls.controlURL_CIF);
